my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EEXTERN/EEXTERN.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EEXTERN.dml:7:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EEXTERN.dml:10:1: error EEXTERN: illegal declaration of extern method
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EEXTERN.dml:14:1: error EEXTERN: illegal declaration of extern method
